--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "nuestro_proyecto",
+  "name": "plataforma",
   "private": true,
   "scripts": {
     "start": "meteor run"
   },
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "bcrypt": "^1.0.2",
     "meteor-node-stubs": "~0.2.4"
   }
 }
